crates/solidity-v2/testing/snapshots/cst_output/FunctionType/constant_state_mutability/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: Unexpected ReturnsKeyword_Reserved. One of AtKeyword_Unreserved, ConstantKeyword_Reserved, ErrorKeyword_Unreserved, FromKeyword_Unreserved, GlobalKeyword_Unreserved, Identifier, ImmutableKeyword_Reserved, InternalKeyword_Reserved, LayoutKeyword_Unreserved, OverrideKeyword_Reserved, PrivateKeyword_Reserved, PublicKeyword_Reserved, RevertKeyword_Unreserved, TransientKeyword_Unreserved was expected
   ╭─[ crates/solidity-v2/testing/snapshots/cst_output/FunctionType/constant_state_mutability/input.sol:3:31 ]
   │
 3 │ function () constant internal returns (uint)
   │                               ───┬───  
   │                                  ╰───── Error occurred here.
───╯
